Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1391

Class RangeToken is not thread-safe

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 2.6.0
    • 2.7.0
    • Utilities
    • None

    Description

      The class RangeToken initializes its fMap data member the first time on-demand, which makes it sensitive to race-conditions. I am proposing a patch to the class, with additional patches to the classes that perform static initialization to ensure that when users request full static initialization, the fMap data member of all static RangeToken instances is initialized.

      Although this does not prevent threading problems in all cases, it will fix the problem with all global statics. I will attempt to propose another patch that takes care of the problem with other uses of RangeToken.

      Attachments

        1. patch.txt
          15 kB
          David N Bertoni

        Activity

          People

            dbertoni David N Bertoni
            dbertoni David N Bertoni
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: