Fix for Jira issue XERCESC-1391.

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@176399 13f79535-47bb-0310-9956-ffa450edef68